<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ResCheck</string>
    <string name="text_default_input">Uncle Bob</string>
    <string name="btn_reverse">Reverse</string>
    <string name="hint_insert_text">Text to reverse</string>
    <string name="menu_copy_to_clipboard">Copy to Clipboard</string>
    <string name="menu_share_with">Share with ..</string>
    <string name="text_copied_to_clipboard">Copied to Clipboard</string>
    <string name="err_unexpected_error">Sorry, an unexpected error occurred</string>
    <string name="title_share_with">Share with ..</string>
    <string name="text_device_general_info">Device general info</string>
    <string name="text_model">Model</string>
    <string name="text_device">Device</string>
    <string name="text_manufacturer">Manufacturer</string>
    <string name="text_product">Product</string>
    <string name="text_api_level">API Level</string>
    <string name="text_api_level_x_y">%1$s (%2$s)</string>
    <string name="text_build_version">Build version</string>
    <string name="text_device_display">Device display</string>
    <string name="text_display_id">Display id</string>
    <string name="text_display_with">Screen width</string>
    <string name="text_display_height">Screen height</string>
    <string name="text_screen_with">Screen width</string>
    <string name="text_screen_height">Screen height</string>
    <string name="text_orientation_unknown">Undefined</string>
    <string name="text_orientation_landscape">Landscape</string>
    <string name="text_orientation_portrait">Portrait</string>
    <string name="text_orientation_square">Square</string>
    <string name="text_display_orientation">Display orientation</string>
    <string name="text_device_memory">Device memory</string>
    <string name="text_device_memory_class_mb">Device memory class</string>
    <string name="text_device_max_memory_mb">Device max memory</string>
    <string name="text_x_mb">%1$s MB</string>
    <string name="text_x_pixels">%1$s pixels</string>
    <string name="text_x_dpi">%1$s dp</string>
    <string name="text_screen_length">Screen length</string>
    <string name="screen_length_long_caps">Long</string>
    <string name="screen_length_notlong_caps">Not long</string>
    <string name="screen_length_unknown_caps">Undefined</string>
    <string name="text_device_screen">Device screen</string>
    <string name="text_screen_density">Screen density</string>
    <string name="text_screen_density_value_dpi">Screen density value</string>
    <string name="text_screen_density_value">Screen density value </string>
    <string name="text_screen_scaled_density">Screen scaled density</string>
    <string name="text_screen_normal_caps">Normal</string>
    <string name="text_screen_small_caps">Small</string>
    <string name="text_screen_large_caps">Large</string>
    <string name="text_screen_xlarge_caps">XLarge</string>
    <string name="text_screen_unknown_caps">Undefined</string>
    <string name="screen_size">Screen size</string>
    <string name="menu_filter">Filter</string>
    <string name="text_nothing_found">No match for the filter</string>
    <string name="text_low_ram_device_yes">Yes</string>
    <string name="text_low_ram_device_no">No</string>
    <string name="text_low_ram_device_unknown">Unknown</string>
    <string name="text_low_ram_device">Low RAM Device?</string>
    <string name="text_screen_smallest_width_dp">Screen smallest width</string>
    <string name="text_font_scale">Display font scale</string>
    <string name="text_screen_touch_type">Kind of touch screen</string>
    <string name="touchscreen_unknown">Undefined</string>
    <string name="touchscreen_finger">Finger</string>
    <string name="touchscreen_no_touch">No touch</string>
    <string name="text_screen_layout_direction">Screen layout direction</string>
    <string name="screen_layout_direction_left_to_right">Left to right</string>
    <string name="screen_layout_direction_right_to_left">Right to left</string>
    <string name="text_display_name">Display name</string>
    <string name="text_unknown">Unknown</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="text_build_tags">Build tags</string>
    <string name="text_serial">Serial</string>
    <string name="text_application_binary_interface">Device ABI</string>
    <string name="text_supported_abis">Supported ABIs</string>
    <string name="text_cpu_abi_1">CPU ABI:</string>
    <string name="text_cpu_abi_2">CPU ABI2:</string>
    <string name="text_graphics">Graphics</string>
    <string name="text_openg_gl_version">OpenGL version</string>
    <string name="text_opengl_es">"OpenGL ES %1$s"</string>
    <string name="menu_open_tv">Open TV view</string>
</resources>
