<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="32sp">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:hint="@string/hint_insert_text"
                android:importantForAutofill="no"
                android:inputType="textCapSentences"
                android:minWidth="250dp"
                android:saveEnabled="false"
                android:textSize="18sp"
                tools:targetApi="o"
                tools:text="@string/app_name"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_reverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:minWidth="150dp"
            android:text="@string/btn_reverse"/>

    </LinearLayout>
</ScrollView>